--- a/recetas/recetas/templates/base.html
+++ b/recetas/recetas/templates/base.html
@@ -1,15 +1,44 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <title>{% block titulo %}Recetas{% endblock %}</title>
+    <link href="{% static 'bootstrap/css/bootstrap.min.css' %}" rel="stylesheet">
+    <link href="{% static 'recetas/css/main.css' %}" rel="stylesheet">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
+    <script src="{% static 'bootstrap/js/jquery.js' %}"></script>
+    <script src="{% static 'bootstrap/js/popper.js' %}"></script>
+    <script src="{% static 'bootstrap/js/bootstrap.bundle.min.js' %}"></script>
+    <script src="{% static 'bootstrap/js/bootstrap.min.js' %}"></script>
 </head>
 <body>
+
 <header>
-    <a href="{% url 'home' %}">Home</a>
-    <a href="{% url 'registro' %}">Registro</a>
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <a class="navbar-brand" href="{% url 'home' %}"><img class="logo" src="{% static 'recetas/img/logo.png' %}"></a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav ml-auto">
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Últimas recetas</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="{% url 'registro' %}">
+                        <button type="button" class="btn btn-outline-primary">Registro</button>
+                    </a>
+                </li>
+            </ul>
+        </div>
+    </nav>
+
 </header>
-{% block content %} {% endblock %}
+<div class="container main-container">
+    {% block content %} {% endblock %}
+</div>
 <footer>
 
     <a href="{% url 'contacto' %}">Contacto</a>
