--- a/recetas/recetas_app/templates/base.html
+++ b/recetas/recetas_app/templates/base.html
@@ -26,11 +26,23 @@
                 <li class="nav-item">
                     <a class="nav-link" href="#">Últimas recetas</a>
                 </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="{% url 'registro' %}">
-                        <button type="button" class="btn btn-outline-primary">Registro</button>
-                    </a>
-                </li>
+                {% if request.user.is_authenticated %}
+                    <li class="nav-item">
+                        Hola, {{ request.user.username }}
+                    </li>
+
+                    <li class="nav-item">
+                        <a class="nav-link" href="{% url 'logout' %}">Desconectar
+                        </a>
+                    </li>
+                {% else %}
+                    <li class="nav-item">
+                        <a class="nav-link" href="{% url 'registro' %}">
+                            <button type="button" class="btn btn-outline-primary">Registro</button>
+                        </a>
+
+                    </li>
+                {% endif %}
             </ul>
         </div>
     </nav>
