--- a/recetas/recetas_app/templates/home.html
+++ b/recetas/recetas_app/templates/home.html
@@ -6,6 +6,29 @@
 
 
 {% block content %}
-<h1>Recetas - home view</h1>
+    <h1>Recetas</h1>
+    <div class="row row-cols-1 row-cols-md-3">
+
+        {% for receta in recetas %}
+            <div class="col mb-4">
+                <div class="card">
+                    <img src="{{ receta.imagen.url }}" class="card-img-top" alt="...">
+                    <div class="card-body">
+                        <h5 class="card-title">{{ receta.nombre }}</h5>
+                        <ul class="lista-ingredientes">
+                            {% for ingrediente in receta.ingredientes.all %}
+                                <li>{{ ingrediente.nombre | truncatechars:35 }}</li>
+                            {% endfor %}
+                        </ul>
+                    </div>
+                    <a href="{% url 'receta' slug=receta.slug %}">
+                        <button class="btn btn-primary btn-block">Ver más</button>
+                    </a>
+                </div>
+            </div>
+
+        {% endfor %}
+
+    </div>
 
 {% endblock %}
