--- a/recetas/recetas_app/static/recetas/css/main.css
+++ b/recetas/recetas_app/static/recetas/css/main.css
@@ -1,3 +1,8 @@
+html{
+    position:relative;
+    min-height: 100%;
+    padding-bottom:100px;
+}
 footer{
     position:absolute;
     bottom:0;
@@ -34,4 +39,13 @@ header .navbar-nav{
 }
 .navbar-brand{
     max-width:200px;
+}
+
+ul.lista-ingredientes{
+    list-style: none !important;
+    padding-left: 0;
+    margin-bottom:0;
+}
+.card{
+    margin-bottom:50px;
 }
