--- a/recetas/recetas_app/templates/contacto.html
+++ b/recetas/recetas_app/templates/contacto.html
@@ -3,5 +3,26 @@
 {% block titulo %}Recetas | Contacto{% endblock %}
 
 {% block content %}
-    <h1> Contacto</h1>
+
+    <div class="col-12 col-lg-6 offset-lg-3">
+        <h1> Contacto</h1>
+        <br/>
+        <p class="text-danger">{{ error }}</p>
+        <p class="text-success">{{ mensaje }}</p>
+        <form action="{% url 'contacto' %}" method="POST">
+            {% csrf_token %}
+            <div class="form-group">
+                <label for="email">Email</label>
+                <input type="email" class="form-control" id="email" name="email" required>
+            </div>
+
+            <div class="form-group">
+                <label for="password">Mensaje</label>
+                <textarea class="form-control" required name="mensaje"></textarea>
+            </div>
+
+            <br/>
+            <button type="submit" class="btn btn-primary">Enviar</button>
+        </form>
+    </div>
 {% endblock %}
